<?xml version="1.0"?>
<package>
  <name>designator_integration</name>
  <version>0.0.3</version>
  <description>
    Metapackage grouping the packages C++ and Common LISP library
    packages for ROS designator integraiton.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>designator_integration_cpp</run_depend>
  <run_depend>designator_integration_lisp</run_depend>
 
  <export>
    <metapackage/>
  </export>
</package>
