<?xml version="1.0"?>
<package>
  <name>designator_integration_cpp</name>
  <version>0.0.3</version>
  <description>Integration of Designator Communication via ROS as C++ Classes</description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/designator_integration</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  
  <export>
    
  </export>
</package>
