<?xml version="1.0"?>
<package>
  <name>designator_integration_lisp</name>
  <version>0.0.0</version>
  <description>The designator_integration_lisp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="winkler@todo.todo">winkler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslisp</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>cl_tf2</build_depend>
  
  <run_depend>roslisp</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>cl_tf2</run_depend>
  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
