<?xml version="1.0"?>
<package>
  <name>designator_integration_lisp</name>
  <version>0.0.3</version>
  <description>Integration of Designator Communication via ROS as Lisp interface</description>

  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslisp</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>cl_tf2</build_depend>
  
  <run_depend>roslisp</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>cl_tf2</run_depend>
  
</package>
